feat: add loader

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ body {
   color: #333;
 }
 
-/* Заголовки */
 h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
@@ -49,9 +48,8 @@ p {
   color: #555;
 }
 
-/* Неоморфические кнопки */
 button {
-  color: #4a4a4a; /* Темно-серый цвет текста */
+  color: #4a4a4a;
   font-weight: bold;
   padding: 0.7em 1.7em;
   font-size: 1rem;
@@ -64,7 +62,7 @@ button {
 }
 
 button:hover {
-  background: #d4d4d4; 
+  background: #d4d4d4;
 }
 
 button:active {
@@ -99,7 +97,6 @@ input[type="text"]:focus {
   box-shadow: 6px 6px 12px #bebebe, -6px -6px 12px #ffffff;
 }
 
-/* Выбранный путь */
 #selectedFolder {
   margin-top: 1rem;
   font-size: 1rem;
@@ -113,7 +110,33 @@ input[type="text"]:focus {
   background: #e0e0e0;
 }
 
-/* Скрытые элементы */
 .hidden {
   display: none;
+}
+
+.spinnerbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 1.2em;
+  color: #555;
 }
