--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   min-height: 100vh;
   background-color: #e0e0e0;
   color: #333;
@@ -35,7 +35,6 @@ body {
 
 h1 {
   font-size: 2.5rem;
-  margin-bottom: 1rem;
   color: #2c3e50;
   text-align: center;
   text-shadow: 1px 1px 3px #c5c5c5;
@@ -46,6 +45,10 @@ p {
   margin-bottom: 1rem;
   text-align: center;
   color: #555;
+}
+
+.title {
+  font-weight:600;
 }
 
 button {
@@ -70,25 +73,12 @@ button:active {
   box-shadow: inset 4px 4px 8px #bebebe, inset -4px -4px 8px #ffffff;
 }
 
-input[type="text"] {
-  flex-grow: 1;
-  padding: 0.7em;
-  font-size: 1rem;
-  border-radius: 0.5em;
-  border: none;
-  background: #e0e0e0;
-  box-shadow: inset 6px 6px 12px #bebebe, inset -6px -6px 12px #ffffff;
-  outline: none;
-  transition: background-color 0.3s ease;
-}
-
-input[type="text"]:focus {
-  box-shadow: inset 4px 4px 8px #bebebe, inset -4px -4px 8px #ffffff;
-}
 
 .path-container {
   display: flex;
+  width: 70%;
   align-items: center;
+  justify-content: space-between;
   gap: 0.5rem;
   margin-bottom: 1rem;
   background: #e0e0e0;
@@ -114,11 +104,22 @@ input[type="text"]:focus {
   display: none;
 }
 
+#loader{
+  position: absolute;
+  top: 15%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+}
 .spinnerbox {
+  background-color:#e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .spinner {
@@ -130,6 +131,21 @@ input[type="text"]:focus {
   animation: spin 1s linear infinite;
 }
 
+.button-box{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.folder-name{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.one-line-folder-name{
+  display: flex;
+  gap: 10px;
+}
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
