--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  font-size: 18px;
   margin: 0;
   padding: 0;
   display: flex;
@@ -73,7 +74,10 @@ button:active {
   box-shadow: inset 4px 4px 8px #bebebe, inset -4px -4px 8px #ffffff;
 }
 
-
+#removePages{
+  margin-top: 30px;
+  font-size: 22px;
+}
 .path-container {
   display: flex;
   width: 70%;
@@ -85,19 +89,6 @@ button:active {
   padding: 1rem;
   border-radius: 1rem;
   box-shadow: 6px 6px 12px #bebebe, -6px -6px 12px #ffffff;
-}
-
-#selectedFolder {
-  margin-top: 1rem;
-  font-size: 1rem;
-  color: #7f8c8d;
-  word-wrap: break-word;
-  max-width: 80%;
-  text-align: center;
-  box-shadow: inset 4px 4px 8px #bebebe, inset -4px -4px 8px #ffffff;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  background: #e0e0e0;
 }
 
 .hidden {
